# tapsilat-rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  production-ready.yml  publish.yml  release.yml  sdk-parity-dispatch.yml
examples/: README.md  advanced_usage.rs  basic_usage.rs  sdk_demo.rs  verify_sdk.rs
src/: client.rs  config.rs  error.rs  lib.rs  main.rs
src/modules/: installments.rs  mod.rs  orders.rs  organization.rs  payments.rs  subscriptions.rs  validators.rs  webhooks.rs
src/types/: buyer.rs  common.rs  mod.rs  order.rs  organization.rs  payment.rs  subscription.rs  webhook.rs
tests/: integration_tests.rs  mock_server_tests.rs  real_api_tests.rs
