[package]
name = "tapsilat"
version = "2025.9.28"
edition = "2021"

authors = ["Tapsilat <github@tapsilat.dev>"]
license = "MIT"
description = "The Tapsilat SDK for Rust"
readme = "README.md"
homepage = "https://tapsilat.com"
repository = "https://github.com/tapsilat/tapsilat-rust"
keywords = ["payment", "fintech","tapsilat"]
categories = ["api-bindings"]

[dependencies]
ureq = { version = "3.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"

[dev-dependencies]
mockito = "1.4"
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "tapsilat"